# try-crew-ai

./: README.md
crypto_researcher/: .env.example  README.md  pyproject.toml  report.md
crypto_researcher/knowledge/: user_preference.txt
crypto_researcher/src/crypto_researcher/: crew.py  main.py
crypto_researcher/src/crypto_researcher/config/: agents.yaml  tasks.yaml
